--- a/index.html
+++ b/index.html
@@ -4,85 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my album</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>fimflix</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <style>
-        @import url("https://fonts.google.com/specimen/Single+Day?subset=korean&noto.script=Kore");
+        @import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
 
         * {
-            font-family: "Single Day", cursive;
+            font-family: "Black Han Sans", sans-serif;
         }
 
-        .mytitle {
-            /* background-color: green; */
-            height: 250px;
+        .main {
             color: white;
 
-            /* 정렬 */
-            display: flex;
-            flex-direction: column;
-            /* column vs row */
-            align-items: center;
-            justify-content: center;
-
-            background-image: url("https://images.unsplash.com/photo-1511992243105-2992b3fd0410?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80");
+            background-image: url("https://www.allkpop.com/upload/2023/10/content/040626/1696415203-20231004-lesserafim.jpg");
             background-position: center;
             background-size: cover;
         }
 
-        .mytitle button {
-            width: 150px;
-            height: 50px;
-            background-color: transparent;
-            color: white;
-            border: 1px solid white;
-            border-radius: 5px;
-            margin-top: 20px;
+        body {
+            background-color: black;
         }
 
         .mycards {
-            /* background-color: green; */
-            width: 600px;
-            margin: 30px auto 0px auto;
+            width: 1200px;
+            margin: 20px auto 20px auto
         }
 
         .mypostingbox {
-            /* background-color: green; */
             width: 500px;
-            margin: 30px auto 0px auto;
-            border-radius: 5px;
+            margin: 20px auto 20px auto;
 
-            /* margin inside the box */
+            border: 1px solid white;
             padding: 20px;
-
-            box-shadow: 0px 0px 3px 0px blue;
-
+            border-radius: 5px;
         }
 
-        .mybtn {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
+        .form-floating>input {
+            background-color: transparent;
+            color: white;
         }
 
-        .mybtn>button {
-            margin-right: 10px
+        .form-floating>label {
+            color: white;
+        }
+
+        .input-group>label {
+            background-color: transparent;
+            color: white;
+        }
+
+        .mypostingbox>button {
+            width: 100%;
         }
     </style>
-    <script type="module">  //type에 module을 넣어주면 onclick()등의 기능이 작동 안함
-        // Firebase SDK 라이브러리 가져오기
+    <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
         import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
         import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
         import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
-
-        // Firebase 구성 정보 설정
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
             apiKey: "AIzaSyAbywG48DYavC8iMn-DtQwuGyb3eCZiz58",
             authDomain: "sparta-fdb5b.firebaseapp.com",
@@ -93,57 +75,47 @@
             measurementId: "G-RZLME5SXWM"
         };
 
-
-        // Firebase 인스턴스 초기화
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        $("#postingbtn").click(async function () {   //어떤 버튼을 눌렀을 때 실행하게됨
-            let image = $('#image').val();
-            let title = $('#title').val();
-            let content = $('#content').val();
-            let date = $('#date').val();
 
-            let doc = { 'image': image, 'title': title, 'content': content, 'date': date };
-            await addDoc(collection(db, "albums"), doc);    //핵심라인
+        $('#savebtn').click(async function () {
+            let title = $('#title').val();
+            let image = $('#image').val();
+            let rating = $('#rating').val();
+            let comment = $('#comment').val();
+
+            let doc = {'image':image, 'title':title, 'rating':rating, 'comment':comment};
+            
+            await addDoc(collection(db, "movies"), doc);
             alert('저장되었습니다.')
             window.location.reload();
         })
 
-        $("#savebtn").click(async function () {   //openclose()역할
+        $('#saveMovieButton').click(async function(){
             $('#postingbox').toggle();
         })
 
-        /* --------------------------------------------------------------------------------------------------------- */
-        //다 로딩후 실행되기에 더이상 의미 없음
-        // $(document).ready(function () {
-        //     // alert('안녕!'); // 이렇게 하면 페이지가 로드되면 알림창이 뜸 
-        //     let url = "http://spartacodingclub.shop/sparta_api/seoulair";
-        //     fetch(url).then(res => res.json()).then(data => {
-        //         let mise = data['RealtimeCityAir']['row'][0]['IDEX_NM'];
-        //         console.log(mise);
-        //         $('#msg').text(mise);
-        //     })
-        // })
 
-        //따라서 위의 코드 대신 안의 내용만 써주면 됨
-        let url = "http://spartacodingclub.shop/sparta_api/seoulair";
+        let url = "http://spartacodingclub.shop/sparta_api/weather/seoul";
         fetch(url).then(res => res.json()).then(data => {
-            let mise = data['RealtimeCityAir']['row'][0]['IDEX_NM'];
-            console.log(mise);
-            $('#msg').text(mise);
+            let current_temp = data['temp'];
+
+            if (current_temp >= 20.00) {
+                $('#ctemp').text('더워요');
+            } else {
+                $('#ctemp').text('추워요');
+            }
         })
 
-        //데이터 읽기 코드, 카드 붙이는 코드
-        let docs = await getDocs(collection(db, "albums"));
+        let docs = await getDocs(collection(db, "movies"));
         docs.forEach((doc) => {
             let row = doc.data();
-            // console.log(row);
-
-            let image = row['image'];
+            
             let title = row['title'];
-            let content = row['content'];
-            let date = row['date'];
+            let image = row['image'];
+            let rating = row['rating'];
+            let comment = row['comment'];
 
             let temp_html = `
             <div class="col">
@@ -151,137 +123,89 @@
                     <img src="${image}">
                     <div class="card-body">
                         <h5 class="card-title">${title}</h5>
-                        <p class="card-text">${content}</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary">${date}</small>
+                        <p class="card-text">${rating}</p>
+                        <p class="card-text">${comment}</p>
                     </div>
                 </div>
-            </div>`;
-
+            </div>`
             $('#card').append(temp_html);
         });
 
-        /* --------------------------------------------------------------------------------------------------------- */
-
-        // function openclose() {
-        //     // alert("testing toggle");
-        //     $('#postingbox').toggle();
-        // }
-
-        // function makeCard() {
-        //     // alert("testing makeCard");
-        //     let image = $('#image').val();
-        //     // alert(image);
-        //     let title = $('#title').val();
-        //     let content = $('#content').val();
-        //     let date = $('#date').val();
-
-        //     let temp_html = `
-        //     <div class="col">
-        //         <div class="card h-100">
-        //             <img src="${image}">
-        //             <div class="card-body">
-        //                 <h5 class="card-title">${title}</h5>
-        //                 <p class="card-text">${content}</p>
-        //             </div>
-        //             <div class="card-footer">
-        //                 <small class="text-body-secondary">${date}</small>
-        //             </div>
-        //         </div>
-        //     </div>`;
-
-        //     $('#card').append(temp_html);
-        // }
-        /* --------------------------------------------------------------------------------------------------------- */
     </script>
 </head>
 
 <body>
-    <div class="mytitle">
-        <h1>my own album</h1>
-        <p>현재 서울의 미세먼지 : <span id="msg">상태</span></p>
-        <button id="savebtn">save memory</button>
+    <header class="p-3 text-bg-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" class="nav-link px-2 text-danger">spartaflix</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">home</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">series</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">movies</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">liked movies</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">Currrent temp : <span id="ctemp">00.00</span></a>
+                    </li>
+                </ul>
+
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+                        aria-label="Search">
+                </form>
+
+                <div class="text-end">
+                    <button type="button" class="btn btn-outline-light me-2">Login</button>
+                    <button type="button" class="btn btn-danger">Sign-up</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="main">
+        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">LE SSERAFIM</h1>
+                <p class="col-md-8 fs-4">르세라핌은 대한민국의 5인조 다국적 걸 그룹으로, 하이브 산하 레이블인 쏘스뮤직에 소속하고 있다. 그룹명은 I'm fearless라는 영어 문장을 어구전철로 재조합한 것으로서 히브리어로 치천사를 의미하기도 한다.</p>
+                <button id="saveMovieButton" type="button" class="btn btn-outline-light">save movie</button>
+                <button type="button" class="btn btn-outline-light">details</button>
+            </div>
+        </div>
     </div>
     <div class="mypostingbox" id="postingbox">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="image" placeholder="album image">
-            <label for="floatingInput">album image</label>
+            <input type="email" class="form-control" id="image" placeholder="movie image address">
+            <label for="floatingInput">LSF image address</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="title" placeholder="album title">
-            <label for="floatingInput">album title</label>
+            <input type="email" class="form-control" id="title" placeholder="movie title">
+            <label for="floatingInput">show title</label>
+        </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">ratings</label>
+            <select class="form-select" id="rating">
+                <option selected>select ratings</option>
+                <option value="⭐">⭐</option>
+                <option value="⭐⭐">⭐⭐</option>
+                <option value="⭐⭐⭐">⭐⭐⭐</option>
+                <option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option>
+                <option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option>
+            </select>
         </div>
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="content" placeholder="album content">
-            <label for="floatingInput">album content</label>
+            <input type="email" class="form-control" id="comment" placeholder="reason for recommendation">
+            <label for="floatingInput">reason for recommendation</label>
         </div>
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="date" placeholder="album date">
-            <label for="floatingInput">album date</label>
-        </div>
-        <div class="mybtn">
-            <button id="postingbtn" type="button" class="btn btn-primary">Save</button>
-            <button type="button" class="btn btn-outline-dark">Close</button>
-        </div>
+        <button id="savebtn" type="button" class="btn btn-danger">save</button>
     </div>
     <div class="mycards">
-        <div id=card class="row row-cols-1 row-cols-md-4 g-4">
-            <!------------------------------- 기본 예시 카드들 4개 ------------------------------->
-            <!-- <div class="col">
-                <div class="card h-100">
-                    <img src="https://images.unsplash.com/photo-1446768500601-ac47e5ec3719?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1446&q=80"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">album title</h5>
-                        <p class="card-text">album content</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary">album date</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://images.unsplash.com/photo-1446768500601-ac47e5ec3719?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1446&q=80"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">album title</h5>
-                        <p class="card-text">album content</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary">album date</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://images.unsplash.com/photo-1446768500601-ac47e5ec3719?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1446&q=80"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">album title</h5>
-                        <p class="card-text">album content</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary">album date</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://images.unsplash.com/photo-1446768500601-ac47e5ec3719?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1446&q=80"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">album title</h5>
-                        <p class="card-text">album content</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-body-secondary">album date</small>
-                    </div>
-                </div>
-            </div> -->
-        </div>
+        <div id="card" class="row row-cols-1 row-cols-md-4 g-4"></div>
     </div>
+
 </body>
 
 </html>
