--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyAbywG48DYavC8iMn-DtQwuGyb3eCZiz58",
-            authDomain: "sparta-fdb5b.firebaseapp.com",
-            projectId: "sparta-fdb5b",
-            storageBucket: "sparta-fdb5b.appspot.com",
-            messagingSenderId: "278563617507",
-            appId: "1:278563617507:web:3e01f5c9c1aa8a746363d6",
-            measurementId: "G-RZLME5SXWM"
+            apiKey: 개인정보 보호,
+            authDomain: 개인정보 보호,
+            projectId: 개인정보 보호,
+            storageBucket: 개인정보 보호,
+            messagingSenderId: 개인정보 보호,
+            appId: 개인정보 보호,
+            measurementId: 개인정보 보호
         };
 
         const app = initializeApp(firebaseConfig);
