--- a/index.html
+++ b/index.html
@@ -1,211 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fimflix</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
-
-        * {
-            font-family: "Black Han Sans", sans-serif;
-        }
-
-        .main {
-            color: white;
-
-            background-image: url("https://www.allkpop.com/upload/2023/10/content/040626/1696415203-20231004-lesserafim.jpg");
-            background-position: center;
-            background-size: cover;
-        }
-
-        body {
-            background-color: black;
-        }
-
-        .mycards {
-            width: 1200px;
-            margin: 20px auto 20px auto
-        }
-
-        .mypostingbox {
-            width: 500px;
-            margin: 20px auto 20px auto;
-
-            border: 1px solid white;
-            padding: 20px;
-            border-radius: 5px;
-        }
-
-        .form-floating>input {
-            background-color: transparent;
-            color: white;
-        }
-
-        .form-floating>label {
-            color: white;
-        }
-
-        .input-group>label {
-            background-color: transparent;
-            color: white;
-        }
-
-        .mypostingbox>button {
-            width: 100%;
-        }
-    </style>
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-        import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-
-        const firebaseConfig = {
-            apiKey: 개인정보 보호,
-            authDomain: 개인정보 보호,
-            projectId: 개인정보 보호,
-            storageBucket: 개인정보 보호,
-            messagingSenderId: 개인정보 보호,
-            appId: 개인정보 보호,
-            measurementId: 개인정보 보호
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-
-
-        $('#savebtn').click(async function () {
-            let title = $('#title').val();
-            let image = $('#image').val();
-            let rating = $('#rating').val();
-            let comment = $('#comment').val();
-
-            let doc = {'image':image, 'title':title, 'rating':rating, 'comment':comment};
-            
-            await addDoc(collection(db, "movies"), doc);
-            alert('저장되었습니다.')
-            window.location.reload();
-        })
-
-        $('#saveMovieButton').click(async function(){
-            $('#postingbox').toggle();
-        })
-
-
-        let url = "http://spartacodingclub.shop/sparta_api/weather/seoul";
-        fetch(url).then(res => res.json()).then(data => {
-            let current_temp = data['temp'];
-
-            if (current_temp >= 20.00) {
-                $('#ctemp').text('더워요');
-            } else {
-                $('#ctemp').text('추워요');
-            }
-        })
-
-        let docs = await getDocs(collection(db, "movies"));
-        docs.forEach((doc) => {
-            let row = doc.data();
-            
-            let title = row['title'];
-            let image = row['image'];
-            let rating = row['rating'];
-            let comment = row['comment'];
-
-            let temp_html = `
-            <div class="col">
-                <div class="card h-100">
-                    <img src="${image}">
-                    <div class="card-body">
-                        <h5 class="card-title">${title}</h5>
-                        <p class="card-text">${rating}</p>
-                        <p class="card-text">${comment}</p>
-                    </div>
-                </div>
-            </div>`
-            $('#card').append(temp_html);
-        });
-
-    </script>
-</head>
-
-<body>
-    <header class="p-3 text-bg-dark">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap"></use>
-                    </svg>
-                </a>
-
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 text-danger">spartaflix</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">home</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">series</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">movies</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">liked movies</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Currrent temp : <span id="ctemp">00.00</span></a>
-                    </li>
-                </ul>
-
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-
-                <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-danger">Sign-up</button>
-                </div>
-            </div>
-        </div>
-    </header>
-    <div class="main">
-        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-            <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">LE SSERAFIM</h1>
-                <p class="col-md-8 fs-4">르세라핌은 대한민국의 5인조 다국적 걸 그룹으로, 하이브 산하 레이블인 쏘스뮤직에 소속하고 있다. 그룹명은 I'm fearless라는 영어 문장을 어구전철로 재조합한 것으로서 히브리어로 치천사를 의미하기도 한다.</p>
-                <button id="saveMovieButton" type="button" class="btn btn-outline-light">save movie</button>
-                <button type="button" class="btn btn-outline-light">details</button>
-            </div>
-        </div>
-    </div>
-    <div class="mypostingbox" id="postingbox">
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="image" placeholder="movie image address">
-            <label for="floatingInput">LSF image address</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="title" placeholder="movie title">
-            <label for="floatingInput">show title</label>
-        </div>
-        <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupSelect01">ratings</label>
-            <select class="form-select" id="rating">
-                <option selected>select ratings</option>
-                <option value="⭐">⭐</option>
-                <option value="⭐⭐">⭐⭐</option>
-                <option value="⭐⭐⭐">⭐⭐⭐</option>
-                <option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option>
-                <option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option>
-            </select>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="comment" placeholder="reason for recommendation">
-            <label for="floatingInput">reason for recommendation</label>
-        </div>
-        <button id="savebtn" type="button" class="btn btn-danger">save</button>
-    </div>
-    <div class="mycards">
-        <div id="card" class="row row-cols-1 row-cols-md-4 g-4"></div>
-    </div>
-
-</body>
-
-</html>
+<!-- 깃 실험중입니다. -->
